// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validateOperationSequence should match existing behaviour APPHRD:APPHRD (CCR: 1) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour APPHRD:APPHRD (CCR: 2) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour APPHRD:APPHRD (CCR: null) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour APPHRD:COMSEN (CCR: 1) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour APPHRD:COMSEN (CCR: 2) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour APPHRD:COMSEN (CCR: null) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour APPHRD:DISARR (CCR: 1) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour APPHRD:DISARR (CCR: 2) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour APPHRD:DISARR (CCR: null) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour APPHRD:NEWREM (CCR: 1) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour APPHRD:NEWREM (CCR: 2) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour APPHRD:NEWREM (CCR: null) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour APPHRD:PENHRG (CCR: 1) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour APPHRD:PENHRG (CCR: 2) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour APPHRD:PENHRG (CCR: null) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour APPHRD:SENDEF (CCR: 1) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour APPHRD:SENDEF (CCR: 2) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour APPHRD:SENDEF (CCR: null) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour APPHRD:SUBVAR (CCR: 1) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour APPHRD:SUBVAR (CCR: 2) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour APPHRD:SUBVAR (CCR: null) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour COMSEN:APPHRD (CCR: 1) 1`] = `
{
  "code": "HO200113",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour COMSEN:APPHRD (CCR: 2) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour COMSEN:APPHRD (CCR: null) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour COMSEN:COMSEN (CCR: 1) 1`] = `
{
  "code": "HO200113",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour COMSEN:COMSEN (CCR: 2) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour COMSEN:COMSEN (CCR: null) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour COMSEN:DISARR (CCR: 1) 1`] = `
{
  "code": "HO200113",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour COMSEN:DISARR (CCR: 2) 1`] = `
{
  "code": "HO200112",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour COMSEN:DISARR (CCR: null) 1`] = `
{
  "code": "HO200112",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour COMSEN:NEWREM (CCR: 1) 1`] = `
{
  "code": "HO200113",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour COMSEN:NEWREM (CCR: 2) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour COMSEN:NEWREM (CCR: null) 1`] = `
{
  "code": "HO200113",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour COMSEN:PENHRG (CCR: 1) 1`] = `
{
  "code": "HO200113",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour COMSEN:PENHRG (CCR: 2) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour COMSEN:PENHRG (CCR: null) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour COMSEN:SENDEF (CCR: 1) 1`] = `
{
  "code": "HO200113",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour COMSEN:SENDEF (CCR: 2) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour COMSEN:SENDEF (CCR: null) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour COMSEN:SUBVAR (CCR: 1) 1`] = `
{
  "code": "HO200113",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour COMSEN:SUBVAR (CCR: 2) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour COMSEN:SUBVAR (CCR: null) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour DISARR:APPHRD (CCR: 1) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour DISARR:APPHRD (CCR: 2) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour DISARR:APPHRD (CCR: null) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour DISARR:COMSEN (CCR: 1) 1`] = `
{
  "code": "HO200112",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour DISARR:COMSEN (CCR: 2) 1`] = `
{
  "code": "HO200112",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour DISARR:COMSEN (CCR: null) 1`] = `
{
  "code": "HO200112",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour DISARR:DISARR (CCR: 1) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour DISARR:DISARR (CCR: 2) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour DISARR:DISARR (CCR: null) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour DISARR:NEWREM (CCR: 1) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour DISARR:NEWREM (CCR: 2) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour DISARR:NEWREM (CCR: null) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour DISARR:PENHRG (CCR: 1) 1`] = `
{
  "code": "HO200115",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour DISARR:PENHRG (CCR: 2) 1`] = `
{
  "code": "HO200115",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour DISARR:PENHRG (CCR: null) 1`] = `
{
  "code": "HO200115",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour DISARR:SENDEF (CCR: 1) 1`] = `
{
  "code": "HO200112",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour DISARR:SENDEF (CCR: 2) 1`] = `
{
  "code": "HO200112",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour DISARR:SENDEF (CCR: null) 1`] = `
{
  "code": "HO200112",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour DISARR:SUBVAR (CCR: 1) 1`] = `
{
  "code": "HO200115",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour DISARR:SUBVAR (CCR: 2) 1`] = `
{
  "code": "HO200115",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour DISARR:SUBVAR (CCR: null) 1`] = `
{
  "code": "HO200115",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour NEWREM:APPHRD (CCR: 1) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour NEWREM:APPHRD (CCR: 2) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour NEWREM:APPHRD (CCR: null) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour NEWREM:COMSEN (CCR: 1) 1`] = `
{
  "code": "HO200113",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour NEWREM:COMSEN (CCR: 2) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour NEWREM:COMSEN (CCR: null) 1`] = `
{
  "code": "HO200113",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour NEWREM:DISARR (CCR: 1) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour NEWREM:DISARR (CCR: 2) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour NEWREM:DISARR (CCR: null) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour NEWREM:NEWREM (CCR: 1) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour NEWREM:NEWREM (CCR: 2) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour NEWREM:NEWREM (CCR: null) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour NEWREM:PENHRG (CCR: 1) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour NEWREM:PENHRG (CCR: 2) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour NEWREM:PENHRG (CCR: null) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour NEWREM:SENDEF (CCR: 1) 1`] = `
{
  "code": "HO200113",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour NEWREM:SENDEF (CCR: 2) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour NEWREM:SENDEF (CCR: null) 1`] = `
{
  "code": "HO200113",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour NEWREM:SUBVAR (CCR: 1) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour NEWREM:SUBVAR (CCR: 2) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour NEWREM:SUBVAR (CCR: null) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour PENHRG:APPHRD (CCR: 1) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour PENHRG:APPHRD (CCR: 2) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour PENHRG:APPHRD (CCR: null) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour PENHRG:COMSEN (CCR: 1) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour PENHRG:COMSEN (CCR: 2) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour PENHRG:COMSEN (CCR: null) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour PENHRG:DISARR (CCR: 1) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour PENHRG:DISARR (CCR: 2) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour PENHRG:DISARR (CCR: null) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour PENHRG:NEWREM (CCR: 1) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour PENHRG:NEWREM (CCR: 2) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour PENHRG:NEWREM (CCR: null) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour PENHRG:PENHRG (CCR: 1) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour PENHRG:PENHRG (CCR: 2) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour PENHRG:PENHRG (CCR: null) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour PENHRG:SENDEF (CCR: 1) 1`] = `
{
  "code": "HO200114",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour PENHRG:SENDEF (CCR: 2) 1`] = `
{
  "code": "HO200114",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour PENHRG:SENDEF (CCR: null) 1`] = `
{
  "code": "HO200114",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour PENHRG:SUBVAR (CCR: 1) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour PENHRG:SUBVAR (CCR: 2) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour PENHRG:SUBVAR (CCR: null) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour SENDEF:APPHRD (CCR: 1) 1`] = `
{
  "code": "HO200113",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SENDEF:APPHRD (CCR: 2) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SENDEF:APPHRD (CCR: null) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SENDEF:COMSEN (CCR: 1) 1`] = `
{
  "code": "HO200113",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SENDEF:COMSEN (CCR: 2) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SENDEF:COMSEN (CCR: null) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SENDEF:DISARR (CCR: 1) 1`] = `
{
  "code": "HO200113",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SENDEF:DISARR (CCR: 2) 1`] = `
{
  "code": "HO200112",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SENDEF:DISARR (CCR: null) 1`] = `
{
  "code": "HO200112",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SENDEF:NEWREM (CCR: 1) 1`] = `
{
  "code": "HO200113",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SENDEF:NEWREM (CCR: 2) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour SENDEF:NEWREM (CCR: null) 1`] = `
{
  "code": "HO200113",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SENDEF:PENHRG (CCR: 1) 1`] = `
{
  "code": "HO200113",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SENDEF:PENHRG (CCR: 2) 1`] = `
{
  "code": "HO200114",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SENDEF:PENHRG (CCR: null) 1`] = `
{
  "code": "HO200114",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SENDEF:SENDEF (CCR: 1) 1`] = `
{
  "code": "HO200113",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SENDEF:SENDEF (CCR: 2) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SENDEF:SENDEF (CCR: null) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SENDEF:SUBVAR (CCR: 1) 1`] = `
{
  "code": "HO200113",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SENDEF:SUBVAR (CCR: 2) 1`] = `
{
  "code": "HO200114",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SENDEF:SUBVAR (CCR: null) 1`] = `
{
  "code": "HO200114",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SUBVAR:APPHRD (CCR: 1) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SUBVAR:APPHRD (CCR: 2) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SUBVAR:APPHRD (CCR: null) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SUBVAR:COMSEN (CCR: 1) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour SUBVAR:COMSEN (CCR: 2) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour SUBVAR:COMSEN (CCR: null) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour SUBVAR:DISARR (CCR: 1) 1`] = `
{
  "code": "HO200115",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SUBVAR:DISARR (CCR: 2) 1`] = `
{
  "code": "HO200115",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SUBVAR:DISARR (CCR: null) 1`] = `
{
  "code": "HO200115",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SUBVAR:NEWREM (CCR: 1) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour SUBVAR:NEWREM (CCR: 2) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour SUBVAR:NEWREM (CCR: null) 1`] = `undefined`;

exports[`validateOperationSequence should match existing behaviour SUBVAR:PENHRG (CCR: 1) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SUBVAR:PENHRG (CCR: 2) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SUBVAR:PENHRG (CCR: null) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SUBVAR:SENDEF (CCR: 1) 1`] = `
{
  "code": "HO200114",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SUBVAR:SENDEF (CCR: 2) 1`] = `
{
  "code": "HO200114",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SUBVAR:SENDEF (CCR: null) 1`] = `
{
  "code": "HO200114",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SUBVAR:SUBVAR (CCR: 1) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SUBVAR:SUBVAR (CCR: 2) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;

exports[`validateOperationSequence should match existing behaviour SUBVAR:SUBVAR (CCR: null) 1`] = `
{
  "code": "HO200109",
  "path": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "ArrestSummonsNumber",
  ],
}
`;
